--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <figure class="home_photo_container" data-aos="zoom-in" data-aos-duration="1200">
       <img
         class="home_photo"
-        src="assets/images/home_photo.jpg"
+        src="home_photo.jpg"
         alt="My Photo"/>
       </figure>
     </div>
@@ -59,7 +59,7 @@
           <figure class="about_photo-container">
             <img
               class="photo_about"
-              src="assets/images/bagus.jpeg"
+              src="bagus.jpeg"
               alt="My Photo"
             />
           </figure>
@@ -246,4 +246,5 @@
 
   </script>
   </body>
+
 </html>
