--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
     <div class="container">
   <div class="section-header fade-in">
-    <h2>Contact Us</h2>
+    <h2>Cleave a Massage</h2>
   </div>
 
   <div class="contact-wrapper" id="contactWrapper">
@@ -246,4 +246,5 @@
 
   </script>
   </body>
+
 </html>
