--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
     <div class="container">
   <div class="section-header fade-in">
-    <h2>Cleave a Massage</h2>
+    <h2>Leave a Massage</h2>
   </div>
 
   <div class="contact-wrapper" id="contactWrapper">
@@ -248,3 +248,4 @@
   </body>
 
 </html>
+
